--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-<style>
+html{
   .center{
     text-align: center;
 
@@ -21,4 +21,4 @@
       width: 200px;
       height: 180px;
   }
-  </style>
+}
